--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ volume status: <span id='volume-status'>(retrieving)</span><br/>
     self.cg.getInstance().then(result => {
       if (result) {
         self.cg.isInstanceOnline(result.InstanceId).then(isOnline => {
-          instanceStatusEl.textContent = `running (${result.InstanceId}, ${result.PublicIpAddress}, ${isOnline ? "online" : "offline"})`
+          const rdpUrl = `rdp://full%20address=s:${result.PublicIpAddress}:3389&username=s:Administrator&desktopwidth=i:1024&desktopheight=i:768`
+
+          instanceStatusEl.innerHTML = `running (${result.InstanceId}, <a href='${rdpUrl}'>${result.PublicIpAddress}</a>, ${isOnline ? "online" : "offline"})`
         })
 
       } else {
