--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.19.js"></script>
 <script src="utility.js"></script>
 <script src="cloudy-gamer.js"></script>
-
+cloudygamer by larry gadea - <a href="https://github.com/lg/cloudy-gamer/">github source and help</a><br/><br/>
 instance status: <span id='instance-status'>(retrieving)</span><br/>
 volume status: <span id='volume-status'>(retrieving)</span><br/>
 <button onclick="javascript:updateStatuses()">update status</button><br/>
