now creates the VPC resources!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cloudygamer by larry gadea - <a href="https://github.com/lg/cloudy-gamer/">githu
 instance status: <span id='instance-status'>(retrieving)</span><br/>
 volume status: <span id='volume-status'>(retrieving)</span><br/>
 <button onclick="javascript:updateStatuses()">update status</button>
-<button onclick="javascript:cg.ensureResourcesExist()">ensure resources exist</button><br/>
+<button onclick="javascript:cg.discoverAndCreateResources()">discover and create resources</button><br/>
 <br/>
 <button onclick="javascript:startInstance()">start instance</button>
 <button onclick="javascript:stopInstance()">stop instance</button><br/>
@@ -25,8 +25,6 @@ volume status: <span id='volume-status'>(retrieving)</span><br/>
     awsRegionZone: "us-west-1c",
     awsLinuxAMI: "ami-bfce84df",    // AMI of ubuntu image with rearranged boot menu
     awsVolumeId: "",
-    awsVPCId: "",
-    awsSubnetVPCId: "",
     awsIAMRoleName: ""              // Used by EC2 instance for SSM (needs AmazonEC2RoleforSSM)
   }
   self.config = null
