--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.7.19/aws-sdk.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lockr/0.8.4/lockr.min.js"></script>
 <script src="cloudy-gamer.js"></script>
 <style>
   details {border: 1px solid black; padding: 5px; width: 600px; margin-bottom: 5px}
@@ -13,8 +14,8 @@ cloudygamer - <a href="https://github.com/lg/cloudy-gamer/">github source and he
   <label for="awsSecretAccessKey">AWS Secret Access Key: </label><input type="text" id="awsSecretAccessKey" value=""/><br/>
   <label for="awsIAMRoleName">AWS EC2 IAM Role Name: </label><input type="text" id="awsIAMRoleName" value=""/><br/>
   <label for="awsRegionZone">AWS Region Zone: </label><input type="text" id="awsRegionZone" value=""/><br/>
-  <button onclick="javascript:saveConfigFromDOM()">save config</button>
-  <button onclick="javascript:testMainConfig()">test/prep</button>
+  <button onclick="saveAndReloadCG()">save config</button>
+  <button onclick="testMainConfig()">test/prep</button>
   <span id='test-aws-status' style='font-size:75%'>&nbsp;</span><br/>
   <p style='font-size:50%'>
     Note 1: Use <a href='user-policy.txt' target='_blank'>this</a> policy for your AWS user<br/>
@@ -25,10 +26,10 @@ cloudygamer - <a href="https://github.com/lg/cloudy-gamer/">github source and he
 <details id="volume-config-view">
   <summary>Volume configuration</summary>
   <label for="awsVolumeName">AWS Volume Name: </label><input type="text" id="awsVolumeName" value=""/><br/>
-  <button onclick="javascript:saveConfigFromDOM()">save config</button><br/>
-  <button onclick="javascript:provisionNewImage()">provision new image</button>
-  <button onclick="javascript:checkProvisionStatus()">check status</button>
-  <button onclick="javascript:terminateProvisioning()">terminate</button>
+  <button onclick="saveAndReloadCG()">save config</button><br/>
+  <button onclick="provisionNewImage()">provision new image</button>
+  <button onclick="checkProvisionStatus()">check status</button>
+  <button onclick="terminateProvisioning()">terminate</button>
   <label for="provision">with password: </label><input type="text" id="provision" value=""/><br/>
   <span id='volume-provision-status' style='font-size:75%'>&nbsp;</span><br/>
 </details>
@@ -37,11 +38,11 @@ cloudygamer - <a href="https://github.com/lg/cloudy-gamer/">github source and he
   <summary>CloudyGamer control</summary>
   instance status: <span id='instance-status'>(retrieving)</span><br/>
   volume status: <span id='volume-status'>(retrieving)</span><br/>
-  <button onclick="javascript:updateStatuses()">update status</button><br/>
+  <button onclick="updateStatuses()">update status</button><br/>
   <br/>
-  <button onclick="javascript:startInstance()">start instance</button>
-  <button onclick="javascript:stopInstance()">stop instance</button><br/>
-  <button onclick="javascript:cg.restartSteam()">restart steam</button><br/>
+  <button onclick="startInstance()">start instance</button>
+  <button onclick="stopInstance()">stop instance</button><br/>
+  <button onclick="cg.restartSteam()">restart steam</button><br/>
   <br/>
   <span id='cur-status' style='font-size:75%'>&nbsp;</span><br/>
 </details>
@@ -50,53 +51,35 @@ cloudygamer - <a href="https://github.com/lg/cloudy-gamer/">github source and he
   self.statusField = document.getElementById('cur-status')
   self.provisionTimer = null
 
-  self.configKeysAndDefaults = {
-    awsAccessKey: "",               // See user-policy.txt for inline policy
-    awsSecretAccessKey: "",
-    awsIAMRoleName: "",             // Used by EC2 instance for SSM (needs AmazonEC2RoleforSSM)
-    awsRegionZone: "us-west-1c",
-    awsVolumeName: "cloudygamer"
-  }
-  self.config = null
-  self.cg = null
+  self.config = {}
 
   self.start = () => {
-    self.loadConfig()
-    self.loadConfigIntoDOM()
+    bindLockr("awsAccessKey", "")
+    bindLockr("awsSecretAccessKey", "")
+    bindLockr("awsIAMRoleName", "")
+    bindLockr("awsRegionZone", "us-west-1c")
+    bindLockr("awsVolumeName", "cloudygamer")
+    saveAndReloadCG()
+  }
 
+  self.saveAndReloadCG = () => {
+    for (const configName of Object.getOwnPropertyNames(self.config)) {
+      if ((el = document.getElementById(configName)))
+        self.config[configName] = el.value
+    }
     self.cg = new CloudyGamer(self.config)
-    self.updateStatuses()
   }
 
-  self.loadConfig = () => {
-    self.config = JSON.parse(localStorage.cloudygamer || "{}")
-
-    for (const configKey of Object.keys(self.configKeysAndDefaults)) {
-      if (typeof self.config[configKey] === "undefined") {
-        self.config[configKey] = self.configKeysAndDefaults[configKey]
+  self.bindLockr = (configName, defaultValue) => {
+    Object.defineProperty(self.config, configName, {
+      set: (newVal) => {
+        Lockr.set(configName, newVal)
+      }, get: (defVal=defaultValue) => {
+        return Lockr.get(configName, defVal)
       }
-    }
-
-    self.saveConfig()
-  }
-
-  self.saveConfig = () => {
-    localStorage.cloudygamer = JSON.stringify(self.config)
-  }
-
-  self.saveConfigFromDOM = () => {
-    for (const configKey of Object.keys(self.configKeysAndDefaults)) {
-      self.config[configKey] = document.getElementById(configKey).value
-      if (typeof self.configKeysAndDefaults[configKey] === "number") {
-        self.config[configKey] = Number(self.config[configKey])
-      }
-    }
-    self.saveConfig()
-  }
-
-  self.loadConfigIntoDOM = () => {
-    for (const configKey of Object.keys(self.configKeysAndDefaults))
-      document.getElementById(configKey).value = self.config[configKey]
+    })
+    if ((el = document.getElementById(configName)))
+      el.value = self.config[configName]
   }
 
   self.testMainConfig = async function() {
